addons/hashicorp-vault/hashicorp-vault-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hashicorp-vault-ingress
  namespace: HASHICORP_VAULT_NAMESPACE
  annotations:
    cert-manager.io/cluster-issuer: CERT_ISSUER
    nginx.org/redirect-to-https: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - HASHICORP_VAULT_SUBDOMAIN.DOMAIN
    secretName: tls-DOMAIN-hashicorp-vault
  rules:
  - host: HASHICORP_VAULT_SUBDOMAIN.DOMAIN
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tbd
            port:
              number: 80
